# NewScanmem

./: .clang-tidy  .clangd  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  SECURITY.md  TODO.md  generate_api_docs.sh  generate_coverage.sh  git_commit_template.md  greeter.cppm  index.html  search.html  sitemap.xml
.github/workflows/: base.yml  ci.yml  clang-tidy.yml  coverage.yml  docs.yml  mkdocs-pages.yml  publish-image.yml  release.yml
API_REFERENCE/: index.html
NamingConvention/: index.html
api/: index.html
cmake/: CodeCoverage.cmake  copy_compile_commands.cmake  coverage.cmake  find_boost.cmake
concepts/endianness/: index.html
concurrency/: index.html
concurrent_cpp20_design/: index.html
core/: index.html
core/main/: index.html
core/process_checker/: index.html
core/show_message/: index.html
core/target_mem/: index.html
core/value/: index.html
coverage/: coverage.profdata  coverage.txt  covindex.html  index.html  summary.txt
docs/: NamingConvention.md
docs/en/: API_REFERENCE.md  README.md  endianness.md  main.md  maps.md  process_checker.md  sets.md  show_message.md  target_mem.md  value.md
docs/zh/: API_REFERENCE.md  README.md  endianness.md  main.md  maps.md  process_checker.md  sets.md  show_message.md  target_mem.md  value.md
doxygen-output/html/: annotated.html  annotated_dup.js  app_8cppm.html  app_8cppm.js  app_8cppm__incl.map  app_8cppm__incl.md5  app__config_8cppm.html  app__config_8cppm.js  app__config_8cppm__incl.map  app__config_8cppm__incl.md5  bytes_8cppm.html  bytes_8cppm.js  bytes_8cppm__incl.map  bytes_8cppm__incl.md5  classProcMemReader-members.html  classProcMemReader.html  classProcMemReader.js  classapp_1_1ResultService-members.html  classapp_1_1ResultService.html  classapp_1_1ScanService-members.html  classapp_1_1ScanService.html  classcli_1_1Application-members.html  classcli_1_1Application.html  classcli_1_1Application.js  classcli_1_1Command-members.html  classcli_1_1Command.html  classcli_1_1Command.js  classcli_1_1CommandRegistry-members.html  classcli_1_1CommandRegistry.html  classcli_1_1CommandRegistry.js  classcli_1_1Command__inherit__graph.map  classcli_1_1Command__inherit__graph.md5  classcli_1_1REPL-members.html  classcli_1_1REPL.html  classcli_1_1REPL.js  classcli_1_1commands_1_1CountCommand-members.html  classcli_1_1commands_1_1CountCommand.html  classcli_1_1commands_1_1CountCommand.js  classcli_1_1commands_1_1CountCommand__coll__graph.md5  classcli_1_1commands_1_1CountCommand__inherit__graph.map  (+1079 more)
en/: index.html
en/API_REFERENCE/: index.html
en/NamingConvention/: index.html
en/endianness/: index.html
en/main/: index.html
en/maps/: index.html
en/process_checker/: index.html
en/sets/: index.html
en/show_message/: index.html
en/target_mem/: index.html
en/value/: index.html
endianness/: index.html
main/: index.html
maps/: index.html
mkdocs/: README.md  mkdocs.yml
mkdocs/docs/: API_REFERENCE.md  NamingConvention.md  api.md  concurrency.md  concurrent_cpp20_design.md  coverage.md  endianness.md  index.md  main.md  maps.md  process_checker.md  scanner.md  scanning_guide.md  sets.md  show_message.md  value.md
mkdocs/site/: 404.html  (+2 more)
process_checker/: index.html
scan/: index.html
scanner/: index.html
scanning_guide/: index.html
scripts/: clang-tidy-wrapper.sh
search/: search_index.json
sets/: index.html
show_message/: index.html
src/: CMakeLists.txt  common.cppm  endianness.cppm  main.cpp  maps.cppm  mem64.cppm  old_scanroutines.c  old_scanroutines.cppm  process_checker.cppm  safe_linux_api.cppm  scanmem.cppm  scanroutines.cppm  sets.cppm  show_message.cppm  targetmem.cppm  user_input.cppm  value.cppm
src/app/: result_service.cppm  scan_service.cppm
src/cli/: app.cppm  app_config.cppm  command.cppm  repl.cppm  session.cppm
src/cli/commands/: count.cppm  help.cppm  list.cppm  pid.cppm  quit.cppm  reset.cppm  scan.cppm  set.cppm  snapshot.cppm  watch.cppm  write.cppm
src/core/: config.cppm  maps.cppm  match.cppm  match_formatter.cppm  memory.cppm  memory_writer.cppm  proc_mem.cppm  process_checker.cppm  region_classifier.cppm  region_filter.cppm  scan_history.cppm  scanner.cppm  targetmem.cppm
src/scan/: bytes.cppm  co_engine.cppm  engine.cppm  factory.cppm  filter.cppm  job.cppm  match_storage.cppm  numeric.cppm  read_helpers.cppm  routine.cppm  string.cppm  types.cppm
src/ui/: console.cppm  interface.cppm  line_editor.cppm  show_message.cppm  terminal.cppm  user_input.cppm
src/utils/: endianness.cppm  logging.cppm  mem64.cppm  parser.cppm  parserStr.cppm  read_helpers.cppm  sets.cppm  string.cppm  version.cppm.in
src/value/: base_value.cppm  buffer.cppm  byte_buffer.cppm  core.cppm  cursor.cppm  flags.cppm  mem64.cppm  parser.cppm  scalar.cppm  text.cppm  types.cppm  value.cppm  view.cppm
target_mem/: index.html
test/: CMakeLists.txt  test_endianness.cpp  test_process_checker.cpp  test_scanroutines.cpp  test_sets.cpp
test/core/: test_maps.cpp  test_match.cpp  test_match_collect.cpp  test_match_formatter.cpp  test_memory.cpp  test_memory_writer.cpp  test_proc_mem.cpp  test_region_classifier.cpp  test_region_filter.cpp  test_scaner.cpp  test_scanner.cpp
test/e2e/test_double/: test_double  test_double.cpp
test/e2e/test_string/: test_string  test_string.cpp
test/integration/: CMakeLists.txt  integration_test.cpp  run_all_tests.sh  test_integration.py
test/integration/targets/: modification_framework.h  target_array_element.cpp  target_fixed_double.cpp  target_fixed_int.cpp  target_fixed_str  target_fixed_str.cpp  target_multiple_types.cpp  target_multiple_values.cpp  target_struct_field.cpp
test/scan/: test_bytes.cpp  test_engine.cpp  test_factory.cpp  test_filter.cpp  test_match_storage.cpp  test_numeric.cpp  test_parallel.cpp  test_string.cpp
test/ui/: test_list_message.cpp  test_show_message.cpp
test/utils/: test_endianness.cpp  test_sets.cpp
test/value/: test_parser.cpp  test_scalar.cpp  test_value.cpp
utils/: index.html
value/: index.html
(+273 files in other folders)
